simple form index

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -32,7 +32,7 @@ title: Assaporami Business - About
 
               <div class="content-about text-center">
                 <div>
-                  <h2>Olimpia Rospigliosi</h2>
+                  <h2>Il team</h2>
                 </div>
                 <div>
                   <h5>Profilo</h5>
