--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -113,7 +113,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
     <div class="content-presentation">
 
       <div class="content-presentation-title">
-        <h3>Assaporami Business - Le soluzionei ristorative innovative per mangiare meglio in azienda</h3>
+        <h3>Assaporami Business - Le soluzioni ristorative innovative per mangiare meglio in azienda</h3>
       </div>
 
       <div class="content-presentation-sub-title">
@@ -130,8 +130,19 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <p class="font-weight-light">Abbiamo pensato a tutto ma soppratutto abbiamo pensato a Voi, ai vostri collaboratori. Non consequat et enim ea laborum laboris aliquip in culpa nisi nulla fugiat non irure irure magna id eiusmod nostrud in anim qui cupidatat. Ea reprehenderit id dolore incididunt sunt sed dolor ut deserunt eu irure ut pariatur irure reprehenderit esse in minim.
         </p>
       </div>
+      <div>
+        <%= partial "/horizontal_simple_form" %>
       </div>
+    </div>
   </div>
+</div>
+
+<div class="banner bg-light-gray">
+  <h3>Sei buoni motivi per scegliere Assaporami in azienda</h3>
+</div>
+
+<div class="banner bg-white">
+  <h3>Ad ognuno il suo piatto bilanciato</h3>
 </div>
 
 <div class="banner bg-light-gray">
