--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -19,15 +19,25 @@
           <li class="nav-item">
             <%= link_to "About", "/about.html", class: "nav-link", id: "nav-color" %>
           </li>
-           <li class="nav-item">
+          <li class="nav-item">
             <%= link_to "Servizi", "/services.html", class: "nav-link", id: "nav-color" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Pubblicazioni", "/editorials.html", class: "nav-link", id: "nav-color" %>
+            <%= link_to "Cibo", "/services.html", class: "nav-link", id: "nav-color" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Aziende", "/services.html", class: "nav-link", id: "nav-color" %>
           </li>
           <li class="nav-item">
             <%= link_to "Contatti", "/contact.html", class: "nav-link", id: "nav-color" %>
           </li>
+          <li class="nav-item">
+            <%= link_to "Accedi", "https://www.assaporami.it/customer/account/login/", class: "nav-link", id: "nav-color" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Registrati", "https://www.assaporami.it/customer/account/create/", class: "nav-link", id: "nav-color" %>
+          </li>
+
         </ul>
       </div>
     </div>
