--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -5,4 +5,5 @@
 @import "footer_top";
 @import "footer_bottom";
 @import "cards_event";
-@import "cards_editorial"
+@import "cards_editorial";
+@import "horizontal_simple_form"
