--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -6,4 +6,5 @@
 @import "footer_bottom";
 @import "cards_event";
 @import "cards_editorial";
-@import "horizontal_simple_form"
+@import "horizontal_simple_form";
+@import "simple_form_button"
