--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -138,7 +138,56 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
 </div>
 
 <div class="banner bg-light-gray">
-  <h3>Sei buoni motivi per scegliere Assaporami in azienda</h3>
+  <div class="container text-center">
+
+    <h3>Sei buoni motivi per scegliere Assaporami in azienda</h3>
+    <div class="row business-cards-reason d-flex">
+
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <i class="fas fa-carrot fa-2x"></i>
+              <h4 class="text-center flex-grow-1">cibo sano</h4>
+          </div>
+          <div>
+            <p>Ea magna in pariatur nisi id fugiat anim qui ut consequat aliquip.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+            <i class="fas fa-carrot fa-2x"></i>
+            <h4 class="text-center flex-grow-1">cibo sano</h4>
+          </div>
+          <div>
+            <p>Ut consequat sit et est eu eiusmod qui dolore.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <div class="card-reason-icon">
+                <i class="fas fa-carrot fa-2x"></i>
+              </div>
+              <div class="card-reason-title">
+                <h4>cibo sano</h4>
+              </div>
+          </div>
+          <div>
+            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          </div>
+        </div>
+      </div>
+
+
+
+
+    </div>
+  </div>
 </div>
 
 <div class="banner bg-white">
