--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -7,4 +7,5 @@
 @import "cards_event";
 @import "cards_editorial";
 @import "horizontal_simple_form";
-@import "simple_form_button"
+@import "simple_form_button";
+@import "card_reason"
