--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -138,7 +138,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
 </div>
 
 <div class="banner bg-light-gray">
-  <div class="container text-center">
+  <div class="container text-center padding-top-bottom" id="marbo-60">
 
     <h3>Sei buoni motivi per scegliere Assaporami in azienda</h3>
     <div class="row business-cards-reason d-flex">
@@ -149,7 +149,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
               <i class="fas fa-carrot fa-2x"></i>
               <h4 class="text-center flex-grow-1">cibo sano</h4>
           </div>
-          <div>
+          <div class="card-reason-text">
             <p>Ea magna in pariatur nisi id fugiat anim qui ut consequat aliquip.</p>
           </div>
         </div>
@@ -158,11 +158,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4">
         <div class="card-reason">
           <div class="card-reason-hat d-flex">
-            <i class="fas fa-carrot fa-2x"></i>
-            <h4 class="text-center flex-grow-1">cibo sano</h4>
+              <i class="fas fa-carrot fa-2x"></i>
+              <h4 class="text-center flex-grow-1">cibo sano</h4>
           </div>
-          <div>
-            <p>Ut consequat sit et est eu eiusmod qui dolore.</p>
+          <div class="card-reason-text">
+            <p>Reprehenderit reprehenderit fugiat sint deserunt dolor velit minim ex nisi sed aliquip voluptate.</p>
           </div>
         </div>
       </div>
@@ -173,11 +173,9 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
               <div class="card-reason-icon">
                 <i class="fas fa-carrot fa-2x"></i>
               </div>
-              <div class="card-reason-title">
-                <h4>cibo sano</h4>
-              </div>
+              <h4 class="text-center flex-grow-1">cibo sano</h4>
           </div>
-          <div>
+          <div class="card-reason-text">
             <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
           </div>
         </div>
