--- a/source/stylesheets/components/_card_reason.scss
+++ b/source/stylesheets/components/_card_reason.scss
@@ -1,15 +1,28 @@
 // .cards-reason {
 //   margin-top: 56px;
 // }
+
 .card-reason {
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin-bottom: 32px;
+  height: 160px;
+  margin-top: 56px;
+}
+
+.card-reason-hat {
+  height: 40px;
 }
 
 .card-reason-title {
   text-align: center;
+}
+
+.card-reason-text {
+  display: flex;
+  height: 140px;
+  align-items: center;
 }
 
 
