business card contact

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -141,13 +141,15 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
   <div class="container text-center padding-top-bottom" id="marbo-60">
 
     <h3>Sei buoni motivi per scegliere Assaporami in azienda</h3>
-    <div class="row business-cards-reason d-flex">
+    <!--Business-cards-reason row-->
+    <div class="row business-cards-reason cards-reason d-flex">
 
       <div class="class=col-12 col-md-6 col-lg-4">
         <div class="card-reason">
           <div class="card-reason-hat d-flex">
-              <i class="fas fa-carrot fa-2x"></i>
-              <h4 class="text-center flex-grow-1">cibo sano</h4>
+              <h4 class="text-center flex-grow-1">
+                <i class="fas fa-carrot"></i>  cibo sano
+              </h4>
           </div>
           <div class="card-reason-text">
             <p>Ea magna in pariatur nisi id fugiat anim qui ut consequat aliquip.</p>
@@ -158,8 +160,8 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4">
         <div class="card-reason">
           <div class="card-reason-hat d-flex">
-              <i class="fas fa-carrot fa-2x"></i>
-              <h4 class="text-center flex-grow-1">cibo sano</h4>
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              </h4>
           </div>
           <div class="card-reason-text">
             <p>Reprehenderit reprehenderit fugiat sint deserunt dolor velit minim ex nisi sed aliquip voluptate.</p>
@@ -171,9 +173,10 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason">
           <div class="card-reason-hat d-flex">
               <div class="card-reason-icon">
-                <i class="fas fa-carrot fa-2x"></i>
+
               </div>
-              <h4 class="text-center flex-grow-1">cibo sano</h4>
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              </h4>
           </div>
           <div class="card-reason-text">
             <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
@@ -181,10 +184,62 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         </div>
       </div>
 
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <div class="card-reason-icon">
 
+              </div>
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              </h4>
+          </div>
+          <div class="card-reason-text">
+            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          </div>
+        </div>
+      </div>
 
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <div class="card-reason-icon">
 
+              </div>
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              </h4>
+          </div>
+          <div class="card-reason-text">
+            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <div class="card-reason-icon">
+
+              </div>
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              </h4>
+          </div>
+          <div class="card-reason-text">
+            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          </div>
+        </div>
+      </div>
     </div>
+    <!--.Business-cards-reason row-->
+
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-6 col-lg-16">
+        <p id="py14-px22">SEI IL TITOLARE / RESPONSABILE DELL'AZIENDA ? </p>
+      </div class="col-12 col-md-6 col-lg-6">
+      <div>
+        <%= link_to "CONTATTACI", "/contact.html", class: "btn btn-simple-contact" %>
+      </div>
+    </div>
+
   </div>
 </div>
 
