--- a/source/stylesheets/components/_card_reason.scss
+++ b/source/stylesheets/components/_card_reason.scss
@@ -1,18 +1,18 @@
-// .cards-reason {
-//   margin-top: 56px;
-// }
+.cards-reason {
+  margin-top: 56px;
+}
 
 .card-reason {
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin-bottom: 32px;
-  height: 160px;
-  margin-top: 56px;
 }
 
 .card-reason-hat {
   height: 40px;
+  margin-top: 16px;
+  padding: 8px;
 }
 
 .card-reason-title {
