--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -106,7 +106,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
   </div>
   <!--Carousel Super Wrapper-->
 
-
+<!--Banner bg-white-->
 <div class="banner bg-white">
 
   <div class="container text-center padding-top-bottom">
@@ -136,7 +136,9 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
     </div>
   </div>
 </div>
+<!--.Banner bg-white-->
 
+<!--Banner bg-light-gray-->
 <div class="banner bg-light-gray">
   <div class="container text-center padding-top-bottom" id="marbo-60">
 
@@ -230,42 +232,126 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       </div>
     </div>
     <!--.Business-cards-reason row-->
-
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-6 col-lg-16">
-        <p id="py14-px22">SEI IL TITOLARE / RESPONSABILE DELL'AZIENDA ? </p>
-      </div class="col-12 col-md-6 col-lg-6">
-      <div>
-        <%= link_to "CONTATTACI", "/contact.html", class: "btn btn-simple-contact" %>
+    <!--row-->
+    <div class="row justify-content-center mt-4">
+      <div class="col-10 col-md-8 col-lg-10">
+        <div class="card-business-green">
+        <p class="mb-0">SEI IL TITOLARE / RESPONSABILE DELL'AZIENDA ?&nbsp;&nbsp;<%= link_to "CONTATTACI", "/contact.html", class: "btn btn-simple-contact" %> </p>
+        </div>
       </div>
     </div>
+    <!--.row-->
 
   </div>
 </div>
+<!--.Banner bg-light-gray-->
 
-<div class="banner bg-white">
-  <h3>Ad ognuno il suo piatto bilanciato</h3>
-</div>
+<!--Banner bg-white-->
+<div class="banner bg-white pb-5">
+  <div class="container text-center padding-top-bottom">
 
-<div class="banner bg-light-gray">
-  <div class="container text-center padding-top-bottom" id="marbo-60">
-    <div>
-      <h3>Eventi realizzati</h3>
-    </div>
-    <div class="row cards-event">
-      <% data.events.each do |event| %>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card-event">
-            <%= image_tag "#{event.picture}" %>
-            <div class="card-event-details d-flex flex-column justify-content-between">
-              <h2><%= event.title %></h2>
-              <h3><%= event.date %></h3>
-            </div>
+    <h3>Come aiutiamo i dipendenti</h3>
+    <!--Business-cards-reason row-->
+    <div class="row business-cards-reason cards-reason d-flex">
+
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <h4 class="text-center flex-grow-1">
+                <i class="fas fa-carrot"></i>  cibo sano
+              </h4>
+          </div>
+          <div class="card-reason-text">
+            <p>Ea magna in pariatur nisi id fugiat anim qui ut consequat aliquip.</p>
           </div>
         </div>
-      <% end %>
+      </div>
+
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              </h4>
+          </div>
+          <div class="card-reason-text">
+            <p>Reprehenderit reprehenderit fugiat sint deserunt dolor velit minim ex nisi sed aliquip voluptate.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <div class="card-reason-icon">
+
+              </div>
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              </h4>
+          </div>
+          <div class="card-reason-text">
+            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <div class="card-reason-icon">
+
+              </div>
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              </h4>
+          </div>
+          <div class="card-reason-text">
+            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <div class="card-reason-icon">
+
+              </div>
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              </h4>
+          </div>
+          <div class="card-reason-text">
+            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <div class="card-reason-icon">
+
+              </div>
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              </h4>
+          </div>
+          <div class="card-reason-text">
+            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          </div>
+        </div>
+      </div>
     </div>
+    <!--.Business-cards-reason row-->
+    <!--row-->
+    <div class="row justify-content-center mt-4">
+      <div class="col-10 col-md-8 col-lg-10">
+        <div class="card-business-green">
+        <p class="mb-0">SEI IL TITOLARE / RESPONSABILE DELL'AZIENDA ?&nbsp;&nbsp;<%= link_to "CONTATTACI", "/contact.html", class: "btn btn-simple-contact" %> </p>
+        </div>
+      </div>
+    </div>
+    <!--.row-->
+
   </div>
 </div>
+<!--.Banner bg-white-->
 
 
