--- a/source/stylesheets/components/_card_reason.scss
+++ b/source/stylesheets/components/_card_reason.scss
@@ -25,7 +25,14 @@
   align-items: center;
 }
 
+.card-business-green {
+border-radius: 2px;
+background: white;
+box-shadow: 0 0 15px rgba(0,0,0,0.2);
+// border: 1px solid #1EDD88;
+padding: 18px 24px;
 
+}
 // .card-reason > img {
 //   height: 200px;
 //   width: 100%;
