card reason content test

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -113,7 +113,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
     <div class="content-presentation">
 
       <div class="content-presentation-title">
-        <h3>Assaporami Business - Le soluzioni ristorative innovative per mangiare meglio in azienda</h3>
+        <h3>Assaporami - Le soluzioni ristorative innovative per mangiare meglio in azienda</h3>
       </div>
 
       <div class="content-presentation-sub-title">
@@ -142,7 +142,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
 <div class="banner bg-light-gray">
   <div class="container text-center padding-top-bottom" id="marbo-60">
 
-    <h3>Sei buoni motivi per scegliere Assaporami in azienda</h3>
+    <h3>Come aiutiamo le aziende</h3>
     <!--Business-cards-reason row-->
     <div class="row business-cards-reason cards-reason d-flex">
 
@@ -150,11 +150,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason">
           <div class="card-reason-hat d-flex">
               <h4 class="text-center flex-grow-1">
-                <i class="fas fa-carrot"></i>  cibo sano
+                <i class="fas fa-carrot icon-color"></i>  Miglioriamo la salute dei vostri dipendenti
               </h4>
           </div>
           <div class="card-reason-text">
-            <p>Ea magna in pariatur nisi id fugiat anim qui ut consequat aliquip.</p>
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
           </div>
         </div>
       </div>
@@ -162,11 +162,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4">
         <div class="card-reason">
           <div class="card-reason-hat d-flex">
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  You'll boost afternoon energy levels.
               </h4>
           </div>
           <div class="card-reason-text">
-            <p>Reprehenderit reprehenderit fugiat sint deserunt dolor velit minim ex nisi sed aliquip voluptate.</p>
+            <p>When your team eats greasy pizza for lunch, they hit a wall at 3pm. Our fresh and nutrient-rich lunches give your employees the focus and stamina they need to finish the day strong.</p>
           </div>
         </div>
       </div>
@@ -177,7 +177,22 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
               <div class="card-reason-icon">
 
               </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  You’ll save time by simplifying lunch logistics.
+              </h4>
+          </div>
+          <div class="card-reason-text">
+            <p>Choosing a restaurant, ordering lunch, and picking it up is a huge waste of resources. We return that time to your team.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="class=col-12 col-md-6 col-lg-4">
+        <div class="card-reason">
+          <div class="card-reason-hat d-flex">
+              <div class="card-reason-icon">
+
+              </div>
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
               </h4>
           </div>
           <div class="card-reason-text">
@@ -192,11 +207,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
               <div class="card-reason-icon">
 
               </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  You’ll find it easier to attract and keep top talent.
               </h4>
           </div>
           <div class="card-reason-text">
-            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+            <p>The best and brightest people flock to the best workplaces. By offering a forward-thinking benefit like LunchOwl, you make it crystal clear to prospective employees that you value and invest in your people.</p>
           </div>
         </div>
       </div>
@@ -207,26 +222,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
               <div class="card-reason-icon">
 
               </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  You’ll make it easier for friendships to form.
               </h4>
           </div>
           <div class="card-reason-text">
-            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <div class="card-reason-icon">
-
-              </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
-              </h4>
-          </div>
-          <div class="card-reason-text">
-            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+            <p>Having friends at works makes us happier and more likely to stay. It’s easy to connect and get to know each other over lunch when it’s delivered.</p>
           </div>
         </div>
       </div>
@@ -236,7 +236,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
     <div class="row justify-content-center mt-4">
       <div class="col-10 col-md-8 col-lg-10">
         <div class="card-business-green">
-        <p class="mb-0">SEI IL TITOLARE / RESPONSABILE DELL'AZIENDA ?&nbsp;&nbsp;<%= link_to "CONTATTACI", "/contact.html", class: "btn btn-simple-contact" %> </p>
+        <p class="mb-0">SEI IL TITOLARE / RESPONSABILE DELL' AZIENDA ?&nbsp;&nbsp;<%= link_to "CONTATTACI", "/contact.html", class: "btn btn-simple-contact" %> </p>
         </div>
       </div>
     </div>
@@ -258,7 +258,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason">
           <div class="card-reason-hat d-flex">
               <h4 class="text-center flex-grow-1">
-                <i class="fas fa-carrot"></i>  cibo sano
+                <i class="fas fa-carrot icon-color"></i>  cibo sano
               </h4>
           </div>
           <div class="card-reason-text">
@@ -270,7 +270,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="class=col-12 col-md-6 col-lg-4">
         <div class="card-reason">
           <div class="card-reason-hat d-flex">
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
               </h4>
           </div>
           <div class="card-reason-text">
@@ -285,7 +285,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
               <div class="card-reason-icon">
 
               </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
               </h4>
           </div>
           <div class="card-reason-text">
@@ -300,7 +300,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
               <div class="card-reason-icon">
 
               </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
               </h4>
           </div>
           <div class="card-reason-text">
@@ -315,7 +315,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
               <div class="card-reason-icon">
 
               </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
               </h4>
           </div>
           <div class="card-reason-text">
@@ -330,7 +330,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
               <div class="card-reason-icon">
 
               </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot"></i>  cibo sano
+              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
               </h4>
           </div>
           <div class="card-reason-text">
