--- a/source/stylesheets/components/_card_reason.scss
+++ b/source/stylesheets/components/_card_reason.scss
@@ -31,7 +31,10 @@ background: white;
 box-shadow: 0 0 15px rgba(0,0,0,0.2);
 // border: 1px solid #1EDD88;
 padding: 18px 24px;
+}
 
+.icon-color {
+  color: $assa-green;
 }
 // .card-reason > img {
 //   height: 200px;
