flip card business

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -143,95 +143,89 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
   <div class="container text-center padding-top-bottom" id="marbo-60">
 
     <h3>Come aiutiamo le aziende</h3>
-    <!--Business-cards-reason row-->
-    <div class="row business-cards-reason cards-reason d-flex">
+    <!--Cards-reason row-->
+    <div class="row cards-reason d-flex">
 
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <h4 class="text-center flex-grow-1">
-                <i class="fas fa-carrot icon-color"></i>  Miglioriamo la salute dei vostri dipendenti
-              </h4>
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
           </div>
-          <div class="card-reason-text">
+          <div class="card-reason-back">
             <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
           </div>
         </div>
       </div>
 
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  You'll boost afternoon energy levels.
-              </h4>
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
           </div>
-          <div class="card-reason-text">
-            <p>When your team eats greasy pizza for lunch, they hit a wall at 3pm. Our fresh and nutrient-rich lunches give your employees the focus and stamina they need to finish the day strong.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <div class="card-reason-icon">
-
-              </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  You’ll save time by simplifying lunch logistics.
-              </h4>
-          </div>
-          <div class="card-reason-text">
-            <p>Choosing a restaurant, ordering lunch, and picking it up is a huge waste of resources. We return that time to your team.</p>
+          <div class="card-reason-back">
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
           </div>
         </div>
       </div>
 
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <div class="card-reason-icon">
-
-              </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
-              </h4>
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
           </div>
-          <div class="card-reason-text">
-            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          <div class="card-reason-back">
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
           </div>
         </div>
       </div>
 
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <div class="card-reason-icon">
-
-              </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  You’ll find it easier to attract and keep top talent.
-              </h4>
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
           </div>
-          <div class="card-reason-text">
-            <p>The best and brightest people flock to the best workplaces. By offering a forward-thinking benefit like LunchOwl, you make it crystal clear to prospective employees that you value and invest in your people.</p>
+          <div class="card-reason-back">
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
           </div>
         </div>
       </div>
 
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <div class="card-reason-icon">
-
-              </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  You’ll make it easier for friendships to form.
-              </h4>
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
           </div>
-          <div class="card-reason-text">
-            <p>Having friends at works makes us happier and more likely to stay. It’s easy to connect and get to know each other over lunch when it’s delivered.</p>
+          <div class="card-reason-back">
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
           </div>
         </div>
       </div>
+
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
+          </div>
+          <div class="card-reason-back">
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+          </div>
+        </div>
+      </div>
+
     </div>
-    <!--.Business-cards-reason row-->
+    <!--.Cards-reason row-->
     <!--row-->
     <div class="row justify-content-center mt-4">
       <div class="col-10 col-md-8 col-lg-10">
@@ -254,90 +248,84 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
     <!--Business-cards-reason row-->
     <div class="row business-cards-reason cards-reason d-flex">
 
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <h4 class="text-center flex-grow-1">
-                <i class="fas fa-carrot icon-color"></i>  cibo sano
-              </h4>
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
           </div>
-          <div class="card-reason-text">
-            <p>Ea magna in pariatur nisi id fugiat anim qui ut consequat aliquip.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
-              </h4>
-          </div>
-          <div class="card-reason-text">
-            <p>Reprehenderit reprehenderit fugiat sint deserunt dolor velit minim ex nisi sed aliquip voluptate.</p>
+          <div class="card-reason-back">
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
           </div>
         </div>
       </div>
 
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <div class="card-reason-icon">
-
-              </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
-              </h4>
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
           </div>
-          <div class="card-reason-text">
-            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          <div class="card-reason-back">
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
           </div>
         </div>
       </div>
 
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <div class="card-reason-icon">
-
-              </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
-              </h4>
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
           </div>
-          <div class="card-reason-text">
-            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          <div class="card-reason-back">
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
           </div>
         </div>
       </div>
 
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <div class="card-reason-icon">
-
-              </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
-              </h4>
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
           </div>
-          <div class="card-reason-text">
-            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          <div class="card-reason-back">
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
           </div>
         </div>
       </div>
 
-      <div class="class=col-12 col-md-6 col-lg-4">
-        <div class="card-reason">
-          <div class="card-reason-hat d-flex">
-              <div class="card-reason-icon">
-
-              </div>
-              <h4 class="text-center flex-grow-1"><i class="fas fa-carrot icon-color"></i>  cibo sano
-              </h4>
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
           </div>
-          <div class="card-reason-text">
-            <p>Proident sint dolor sint laborum occaecat commodo ad commodo cillum nulla pariatur.</p>
+          <div class="card-reason-back">
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
           </div>
         </div>
       </div>
+
+      <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
+        <div class="card-reason-inner">
+          <div class="card-reason-front">
+                <h4 class="text-center">
+                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                </h4>
+          </div>
+          <div class="card-reason-back">
+            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+          </div>
+        </div>
+      </div>
+
     </div>
     <!--.Business-cards-reason row-->
     <!--row-->
